--- a/package.json
+++ b/package.json
@@ -17,9 +17,19 @@
   },
   "homepage": "https://github.com/charlesponti/code-tests#readme",
   "devDependencies": {
-    "eslint": "^4.3.0"
+    "eslint": "^4.3.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^4.2.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   },
   "dependencies": {
     "eslint-config-standard": "^10.2.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "standard"
+    ]
   }
 }
