chore(eslint): Set no-console to 0

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "extends": [
       "eslint:recommended",
       "standard"
-    ]
+    ],
+    "rules": {
+      "no-console": 0
+    }
   }
 }
