--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^4.2.3",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
-  },
-  "dependencies": {
+    "eslint-plugin-standard": "^3.0.1",
     "eslint-config-standard": "^10.2.1"
   },
   "eslintConfig": {
@@ -34,5 +32,8 @@
     "rules": {
       "no-console": 0
     }
+  },
+  "dependencies": {
+    "yargs": "^8.0.2"
   }
 }
